# ontology_validator

./: .gitignore  Cargo.toml  README.md  justfile
assets/: prefix_file_name.json
assets/ontologies/: bibframe.rdf  bibo.rdf  cidoc_crm.rdf  dcterms.rdf  lido.xsd  schema_org.ttl
datamodel/: Cargo.toml
datamodel/src/: error.rs  lib.rs  reserved_vocabulary.rs
datamodel/src/domain/: cardinality.rs  comment.rs  dasch_list.rs  data_model.rs  gui_element.rs  label.rs  mod.rs  object.rs  ontology.rs  property.rs  res_property.rs  resource.rs  super_field_property.rs  super_field_resource.rs
datamodel/src/domain/builder/: data_model_builder.rs  mod.rs
reader/: Cargo.toml
reader/src/: error.rs  graph_import.rs  json_import.rs  lib.rs
ref_ontology/: Cargo.toml
ref_ontology/src/: error.rs  lib.rs  ref_ontology.rs
validation/: Cargo.toml
validation/src/: main.rs  validate.rs
